project(insLisp)
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost COMPONENTS regex)
if(DEBUG)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG")
endif()
if(Boost_FOUND)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_USE_BOOST")
  include_directories(${Boost_INCLUDE_DIRS})
else()
  message(STATUS "No Boost found. Using std::regex instead.")
endif()
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -utf-8")
endif()
add_subdirectory(src)
